--- a/software_implementation/9_Acceleration_structures/makefile_GRID
+++ b/software_implementation/9_Acceleration_structures/makefile_GRID
@@ -1,9 +1,9 @@
-APP = shading
+APP = acceleration_GRID
 CC=g++
 CLEANBROKEN = '1'
 # Add -pg for GNU profiling remove -g
-LIBS = -Wall -pg -fpermissive -O4
-SRC = shading.cpp
+LIBS = -Wall -p -std=c++14 -fpermissive -O4 -DACCEL_GRID
+SRC = acceleration.cpp
 OBJ = $(SRC:.ccp=.o)
 
 all: build
