Added program to check PSNR between 2 pictures

--- a/software_implementation/4_Intro_to_shading_BASE_SYSEM/makefile
+++ b/software_implementation/4_Intro_to_shading_BASE_SYSEM/makefile
@@ -16,5 +16,13 @@ $(APP): $(OBJ)
 %.o: %.cpp 
 	$(CC) $< $(DEPS) $(LIBS) -c -o $@ 
 
+build: check_out
+
+check_out:	check_out.o
+	$(CC) $^ $(DEPS) $(LIBS) -o $@ 
+
+check_out.o:	output_quality_check.cpp
+	$(CC) $< $(DEPS) $(LIBS) -c -o $@ 
+
 clean:
-	rm -rf $(APP) *.o
+	rm -rf $(APP) check_out *.o
