--- a/hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/.project
+++ b/hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/.project
@@ -37,6 +37,16 @@
 			<location>/run/media/nikolas/Linux_Data/Git_Repos/RayTracing_FPGA/hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/.apc/.tb</location>
 		</link>
 		<link>
+			<name>.reference/stdint-uintn.h</name>
+			<type>1</type>
+			<location>/usr/include/bits/stdint-uintn.h</location>
+		</link>
+		<link>
+			<name>.reference/types.h</name>
+			<type>1</type>
+			<location>/usr/include/bits/types.h</location>
+		</link>
+		<link>
 			<name>base_hls_run/constraints</name>
 			<type>2</type>
 			<location>/run/media/nikolas/Linux_Data/Git_Repos/RayTracing_FPGA/hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/base_hls_run/.tcls</location>
