--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/Ba
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/BaseSolution/sim/
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/.apc/
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/base_hls_run/
-
+hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/Debug/
 # Vivado Files
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.cache/
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.runs/
@@ -23,7 +23,8 @@ hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.ip
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.sim/
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.srcs/
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.xpr
-
+hardware_implementation/base_hardware_project/Base_System_Vivado_project/
+hardware_implementation/base_hardware_project/Packages/
 # Vitis Files
 hardware_implementation/vitis_workspace/
 hardware_implementation/base_hardware_project/vitis_workspace/
