Fixed HLS vec3f peripheral simulation bug

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/Ba
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/.apc/
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/base_hls_run/
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/Debug/
+hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/base_rayti_peripheral/
+hardware_implementation/ray_triangle_intersection_HLS_vec3/
+
 # Vivado Files
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.cache/
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.runs/
