Added sources and project for optimised path

--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,12 @@ hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.xp
 hardware_implementation/base_hardware_project/Base_System_Vivado_project/
 hardware_implementation/base_hardware_project/Packages/
 hardware_implementation/base_hardware_project/Base_System_Vivado_project_float/
+hardware_implementation/base_hardware_project/Optimised_System_Vivado_project/
 # Vitis Files
 hardware_implementation/vitis_workspace/
 hardware_implementation/base_hardware_project/vitis_workspace/
 hardware_implementation/base_hardware_project/vitis_workspace_float/
+hardware_implementation/base_hardware_project/vitis_workspace_optSolo
 # Executables
 shading
 check_out
