Updated ARM codes to new scene selection method and added tcl command list for vivado and vitis hls projects

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/De
 hardware_implementation/ray_triangle_intersection_HLS/RayTriangleIntersection/base_rayti_peripheral/
 hardware_implementation/ray_triangle_intersection_HLS_vec3/RayTriangleIntersection/
 hardware_implementation/ray_triangle_instersection_opt_HLS/RayTriangleIntersectionOpt/
+hardware_implementation/optimisation_aprecision_project/Packages/
+hardware_implementation/ray_triangle_intersection_HLS_opt/RayTriangleIntersection_opt/
 
 # Vivado Files
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.cache/
