Added project for buffer pre multy peripheral

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ hardware_implementation/ray_triangle_intersection_HLS_vec3/RayTriangleIntersecti
 hardware_implementation/ray_triangle_instersection_opt_HLS/RayTriangleIntersectionOpt/
 hardware_implementation/optimisation_aprecision_project/Packages/
 hardware_implementation/ray_triangle_intersection_HLS_opt/RayTriangleIntersection_opt/
+hardware_implementation/ray_triangle_intersection_HLS_buff/RayTriangleIntersection_buf/
+
 
 # Vivado Files
 hardware_implementation/Base_System_Vivado_project/Base_System_Vivado_project.cache/
@@ -34,7 +36,9 @@ hardware_implementation/base_hardware_project/Packages/
 hardware_implementation/base_hardware_project/Base_System_Vivado_project_float/
 hardware_implementation/base_hardware_project/Optimised_System_Vivado_project/
 hardware_implementation/optimisation_aprecision_project/Optimised_System_Vivado_project/
-
+hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_project/
+hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_project
+hardware_implementation/optimisation_buffer_project/Packages/
 
 # Vitis Files
 hardware_implementation/vitis_workspace/
@@ -42,6 +46,9 @@ hardware_implementation/base_hardware_project/vitis_workspace/
 hardware_implementation/base_hardware_project/vitis_workspace_float/
 hardware_implementation/base_hardware_project/vitis_workspace_optSolo/
 hardware_implementation/optimisation_aprecision_project/vitis_workspace_optPrecision/
+hardware_implementation/optimisation_buffer_project/vitis_workspace_buff/
+
+
 # Executables
 shading
 check_out
