--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,9 @@ hardware_implementation/base_hardware_project/Optimised_System_Vivado_project/
 hardware_implementation/optimisation_aprecision_project/Optimised_System_Vivado_project/
 hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_project/
 hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_project
+hardware_implementation/optimisation_multy_project/Optimised_System_Vidado_project/
 hardware_implementation/optimisation_buffer_project/Packages/
+
 
 # Vitis Files
 hardware_implementation/vitis_workspace/
@@ -47,7 +49,7 @@ hardware_implementation/base_hardware_project/vitis_workspace_float/
 hardware_implementation/base_hardware_project/vitis_workspace_optSolo/
 hardware_implementation/optimisation_aprecision_project/vitis_workspace_optPrecision/
 hardware_implementation/optimisation_buffer_project/vitis_workspace_buff/
-
+hardware_implementation/optimisation_multy_project/vitis_workspace_multy/
 
 # Executables
 shading
