Added x2 peripheral implementation runnung at max available frequency

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_proj
 hardware_implementation/optimisation_buffer_project/Optimised_System_Vivado_project
 hardware_implementation/optimisation_multy_project/Optimised_System_Vidado_project/
 hardware_implementation/optimisation_buffer_project/Packages/
-
+hardware_implementation/optimisation_multy_project/Optimised_System_Vidado_project_x2/
 
 # Vitis Files
 hardware_implementation/vitis_workspace/
@@ -49,6 +49,7 @@ hardware_implementation/base_hardware_project/vitis_workspace_float/
 hardware_implementation/base_hardware_project/vitis_workspace_optSolo/
 hardware_implementation/optimisation_aprecision_project/vitis_workspace_optPrecision/
 hardware_implementation/optimisation_buffer_project/vitis_workspace_buff/
+hardware_implementation/optimisation_multy_project/vitis_workspace_multy_x2/
 hardware_implementation/optimisation_multy_project/vitis_workspace_multy/
 
 # Executables
